<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>p2d_node</name>
  <version>0.0.0</version>
  <description>This is a node that subscribes to panoramic images and publishes depth/pcl</description>
  <maintainer email="koojiehui@outlook.com">jiehui</maintainer>
  <license>MIT</license>

  <exec_depend>cv_bridge</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
